# local_judge

./: .travis.yml  Cargo.toml  build.rs  build.sh
1/: 1.in  10.in  10.out  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
2/: 1.in  10.in  2.in  3.in  4.in  5.in  6.in  7.in  8.in  9.in
src/: main.rs
