[package]
name = "assignment4"
version = "0.1.0"
authors = ["schrodingerzhu <i@zhuyi.fan>"]
edition = "2018"
build = "build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lz4 = "1.23.1"
base64 = "0.11.0"
uuid = {version = "0.8.1", features = ["v4"] }
rust-argon2 = "0.6.0"
sodiumoxide = "0.2.5"
clap = "2.33.0"
[build-dependencies]
rust-argon2 = "0.6.0"
lz4 = "1.23.1"
uuid = {version = "0.8.1", features = ["v4"] }
sodiumoxide = "0.2.5"
